samples/_failures_safe/1761731090_6479ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8aaef4a.c: In function ‘main’:
./samples/SAFE/__tmp_c8aaef4a.c:155:17: error: expected expression at end of input
  155 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_c8aaef4a.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8aaef4a.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8aaef4a.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8aaef4a.c:155:17: error: expected declaration or statement at end of input
